# voice-ninja-server

./: .env.example  .gitignore  ADMIN_SETUP.md  PROJECT_GUIDE.md  README.md  alembic.ini  bot.py  debug_rag.py  inconsistent_ledger.py  main.py  manage_admin.py  manage_db.py  populate_db.py  populate_elevenlabs_data.py  pyproject.toml  requirements.txt  server.py  snakescript_kb.csv  variables.py
.github/workflows/: alembic.yml
alembic/: env.py
app/: main.py
app/core/: config.py
app/databases/: models.py  schema.py
app/routers/: __init__.py  adminpanel.py  api.py  bot.py  web.py  websocket.py
app/services/: __init__.py  audio_enhancement.py  audio_storage.py  bot_tools.py  enhanced_vad.py  voice_assistant.py
app/utils/: helper.py  jwt_utils.py  langchain_integration.py
app/validators/: api_validators.py
app_v2/: __init__.py  constants.py
app_v2/core/: config.py  elevenlabs_config.py  exceptions.py
app_v2/databases/: base.py  init_db.py  models.py  (+1 more)
archive/: config.py  main.py
elevenlabs_app/: elevenlabs_config.py
logger_setup/: __init__.py
migrations/: env.py
schemas/: audio.py
scripts/: add_languages_11labs.py  elevenlab_llm_models_add.py  elevenlab_voices_add.py  insert_system_variables.py
static/: animations.js  audio_list.js  connect.css  frame.proto  websocket.js
templates/: audio_list.html  base.html  connect.html  elevenlabs_dashboard.html  elevenlabs_testing.html  testing.html  view-source.html
uploads/: 28_1770094649.820352_file-sample_150kB.docx
utils/: __init__.py  audio_storage.py  bot.py  config.py  extra_utils.py
(+243 files in other folders)
