[project]
name = "voice-ninja-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "aiohttp==3.11.14",
    "alembic==1.14.1",
    "asyncpg==0.30.0",
    "bcrypt==4.2.1",
    "docx2txt==0.8",
    "fastapi==0.115.8",
    "fastapi-mail==1.4.2",
    "fastapi-sqlalchemy==0.2.1",
    "google-generativeai==0.8.5",
    "itsdangerous>=2.2.0",
    "pillow==11.1.0",
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "pymupdf==1.25.3",
    "pytesseract==0.3.13",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.5.0",
    "python-multipart>=0.0.22",
    "requests==2.32.3",
    "sqlalchemy==2.0.38",
    "starlette==0.45.3",
    "twilio==9.4.4",
    "uvicorn==0.34.0",
]
